--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,11 @@
 {
   "passPerPreset": true,
   "plugins": [
-    "transform-runtime",
-    ["lodash", { "id": ["lodash", "semantic-ui-react"] }]
+    "transform-runtime"
   ],
   "presets": [
     "react",
     "es2015",
-    "stage-0",
+    "stage-0"
   ]
 }
